--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,13 +3,14 @@
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
-export_filter="all_resources"
+export_filter="scenes"
+export_files=PackedStringArray()
 include_filter=""
 exclude_filter=""
-export_path="../../Desktop/Desk pet.exe"
+export_path="../../Downloads/Desk pet.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -22,7 +23,7 @@ script_export_mode=1
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=2
+debug/export_console_wrapper=0
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
@@ -64,3 +65,6 @@ Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorActi
 ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
+dotnet/include_scripts_content=false
+dotnet/include_debug_symbols=false
+dotnet/embed_build_outputs=false
