updated from main

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,18 +6,17 @@ runnable=true
 advanced_options=true
 dedicated_server=false
 custom_features=""
-export_filter="scenes"
-export_files=PackedStringArray()
+export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Downloads/Desk pet.exe"
+export_path="../../Downloads/新增資料夾/Desk pet.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
 seed=0
 encrypt_pck=false
 encrypt_directory=false
-script_export_mode=1
+script_export_mode=0
 
 [preset.0.options]
 
